--- a/en/meta.yml
+++ b/en/meta.yml
@@ -12,5 +12,9 @@ technologies: "electronics, sense-hat, physical computing, html/css, scratch, py
 site_areas:
 steps:
   - title: Introduction
-  - title: What you will need
-  - title: Step title
+  - title: Getting setup
+  - title: Creating a question
+  - title: Checking answers
+  - title: Multiple questions
+  - title: Wrapping up
+  - title: What next?
