--- a/en/meta.yml
+++ b/en/meta.yml
@@ -16,7 +16,7 @@ steps:
   - title: What you will need
   - title: Get set up
   - title: Create a question
-  - title: Check answers
-  - title: Multiple questions
+  - title: Keep score
+  - title: More questions
   - title: Finish your app
   - title: What next?
