--- a/en/meta.yml
+++ b/en/meta.yml
@@ -5,11 +5,14 @@ theme: green # possible values: blue, green, navy, orange, red, turquoise, viole
 duration: 2
 listed: false
 ingredient: false
-copyedit: false
-interests: animals, art, humour, space, photography, outdoors, music, games
-technologies: electronic-components, sense-hat, html-css-javascript, scratch, python
+copyedit: true
+curriculum: 2, design-0, programming-2, phys-comp-0, manufacture-0, community-0
+interests: animals
+technologies: app-inventor
 site_areas: coderdojo
-version: 1
+hardware: 
+software: app-inventor
+version: 4.0.0
 last_tested: 2017-01-01
 steps: 
   - title: Introduction
