--- a/en/meta.yml
+++ b/en/meta.yml
@@ -3,7 +3,7 @@ hero_image: images/banner.png
 description: Learn how to use App Inventor to make a quiz app
 theme: green # possible values: blue, green, navy, orange, red, turquoise, violet, yellow
 duration: 2
-listed: false
+listed: true
 ingredient: false
 copyedit: true
 curriculum: 2, design-0, programming-2, phys-comp-0, manufacture-0, community-0
