--- a/en/meta.yml
+++ b/en/meta.yml
@@ -1,4 +1,4 @@
-title: Beginner App Inventor Sushi Cards
+title: Canine quiz
 hero_image: images/banner.png
 description: Learn how to use App Inventor to make a quiz app
 theme: green # possible values: blue, green, navy, orange, red, turquoise, violet, yellow
