Adding completion flags to meta yaml

--- a/en/meta.yml
+++ b/en/meta.yml
@@ -1,7 +1,8 @@
+---
 title: Canine quiz
 hero_image: images/banner.png
 description: Learn how to use App Inventor to make a quiz app
-theme: green # possible values: blue, green, navy, orange, red, turquoise, violet, yellow
+theme: green
 duration: 2
 listed: true
 ingredient: false
@@ -10,15 +11,17 @@ curriculum: 2, design-0, programming-2, phys-comp-0, manufacture-0, community-0
 interests: animals
 technologies: app-inventor
 site_areas: coderdojo
-hardware: 
+hardware:
 software: app-inventor
 version: 4.0.0
 last_tested: 2017-01-01
-steps: 
-  - title: Introduction
-  - title: Get set up
-  - title: Create a question
-  - title: Keep score
-  - title: More questions
-  - title: Finish your app
-  - title: What next?
+steps:
+- title: Introduction
+  completion: engaged
+- title: Get set up
+- title: Create a question
+- title: Keep score
+- title: More questions
+  completion: internal
+- title: Finish your app
+- title: What next?
